Add support for enabling and disabling DLC #8
